# chorus-container-apps

./: .envrc.sample  .gitignore  LICENSE  Makefile  README.md  compose.yaml
etl/: Dockerfile  _dependencies.R  pyproject.toml  requirements.txt  start.sh
etl/src/etl/: __init__.py  ares.R  aresIndexer.R  cdm-ddl.sql  common.py  config.py  era-tables.sql  ingest.py  merge.py  network.py  vocab-load.sh  vocab-views.sql  vocabulary-ddl.sql  vocabulary-index.sql  vocabulary.py
etl/src/etl/aimahead/: create-challenge-set.sql  create-vent-specific-sample.sql  recreate-registry.sql  transfer-to-aimahead-pg.sh  ventilator-days.sql
etl/src/etl/atlas/: achilles-ddl.sql  cohort-report.sql  copy_delphi.sh  create-cohort-payload.py  curl-cohorts.sh  generate-cohorts.sh  orchestrate.yaml  result-ddl-rapid.sql
etl/src/etl/ingest-etl/: dateshift.sql
etl/src/etl/merge-etl/: cdm_index.sql  cdm_source.sql  condition_era.sql  condition_occurrence.sql  death.sql  device_exposure.sql  drug_era.sql  drug_exposure.sql  measurement.sql  merge_ddl.sql  note.sql  note_map.sql  note_nlp.sql  observation.sql  observation_period.sql  orchestrate.yaml  person.sql  person_map.sql  procedure_occurrence.sql  specimen.sql  visit_detail.sql  visit_detail_map.sql  visit_occurrence.sql  visit_occurrence_map.sql
etl/src/etl/msft-challenge/: create-challenge-set.sh  create-vent-specific-sample.sql  recreate-registry.sql  ventilator-days.sql
etl/src/etl/registry/: mm-dateshift.sql  waveform-registry-ddl.sql  waveform-registry-merge.sql  waveform-registry-mgh.sql  waveform-registry-nationwide.sql  (+3 more)
(+307 files in other folders)
